--- a/Latex/texto.bib
+++ b/Latex/texto.bib
@@ -25,3 +25,12 @@ BOOKTITLE    = {Proceedings of the 4th Alvey Vision Conference},
 YEAR         = {1988},
 Pages        = {147–151},
 }
+
+@CONFERENCE{LucasKanade,
+AUTHOR       = {B. D. Lucas and T. Kanade}, 
+TITLE        = {An iterative image registration technique with an application to stereo vision},
+BOOKTITLE    = {Proceedings of Imaging Understanding Workshop},
+YEAR         = {1981},
+Pages        = {121-130},
+}
+
